--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@ footer a { color:#1976d2; text-decoration:none; }
   <!-- زر خروج الأدمين -->
   <button id="logoutAdminBtn">خروج الأدمين</button>
 
+   <!-- زر العداد -->
+  <!-- Visitor Counter -->
+<div id="visitorCounter" style="
+  margin-top:40px;
+  padding-top:10px;
+  border-top:1px solid #444;
+  text-align:center;
+  font-size:13px;
+  color:#ccc;
+">
+  Visits: <span id="visitCount">0</span>
+</div>
+
   <!-- الفورم لإضافة الفيديو -->
   <div id="videoForm">
       <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
@@ -382,6 +395,7 @@ renderVideos();
 
 </body>
 </html>
+
 
 
 
