--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@ header div p { font-size:1.3rem; color:#e0f7fa; text-shadow:1px 1px 3px rgba(0,0
 section { margin-bottom:50px; }
 section h2 { color:#1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom:2px solid #1976d2; display:inline-block; padding-bottom:4px; }
 .videos { display:grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:40px; }
-.videoTitle { font-size:0.9rem; color:#0d47a1; text-align:center; margin-bottom:5px; }
+.videoTitle {
+  font-size: 0.9rem;
+  color: #0d47a1;
+  text-align: center;
+  margin-bottom: 5px;
+
+  white-space: nowrap;      /* يمنع التفاف النص */
+  overflow: hidden;         /* يخفي النص الزائد */
+  text-overflow: ellipsis;  /* يظهر ... عند طول النص */
+}
+
 .videoBox { background:#e3f2fd; padding:0; border-radius:12px; box-shadow:0 6px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; }
 .videoBox:hover { transform:translateY(-5px); box-shadow:0 12px 25px rgba(0,0,0,0.2); }
 .videoBox iframe { width:100%; height:200px; border-radius:10px; }
@@ -113,6 +123,7 @@ fetch('videos.json')
 
 </body>
 </html>
+
 
 
 
