--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@ footer a { color:#1976d2; text-decoration:none; }
   <button id="loadMoreBtn">Load More</button>
 </section>
 
+<!-- قسم ملفات PDF: يتيح للزائر تحميل ملفات تعليمية (عبارات المطار) -->
 <section id="pdfs">
   <h2>Downloadable PDFs</h2>
   <div class="resources">
+
     <div class="pdfBox">
-      <h3>Lesson 1 PDF</h3>
-      <a href="lesson1.pdf" download>Download PDF</a>
+      <h3>30 Airport Phrases</h3>
+      <a href="30_Airport_Phrases.pdf" download>Download PDF</a>
     </div>
-    <div class="pdfBox">
-      <h3>Lesson 2 PDF</h3>
-      <a href="lesson2.pdf" download>Download PDF</a>
-    </div>
+
   </div>
 </section>
+
 
 <section id="contact">
   <h2>Contact Us</h2>
@@ -160,6 +160,7 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
