--- a/index.html
+++ b/index.html
@@ -89,12 +89,18 @@ footer a { color:#1976d2; text-decoration:none; }
 <section id="pdfs">
   <h2>Downloadable PDFs</h2>
   <div class="resources">
-
+    
+  <!-- الملف الأول-->
     <div class="pdfBox">
       <h3>30 Airport Phrases</h3>
       <a href="30_Airport_Phrases.pdf" download>Download PDF</a>
     </div>
-
+    <!-- الملف القاني-->
+    <div class="pdfBox">
+      <h3>30 Restaurant Phrases</h3>
+      <a href="30_Restaurant_Phrases.pdf" download>Download PDF</a>
+    </div>
+    
   </div>
 </section>
 
@@ -160,6 +166,7 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
