--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ footer a { color:#1976d2; text-decoration:none; }
     <!-- الملف القاني-->
     <div class="pdfBox">
       <h3>30 Restaurant Phrases</h3>
-      <a href="30_Restaurant_Phrases.pdf" download>Download PDF</a>
+      <a href="30_Restaurant_Phrases_Egyptian_Arabic.pdf" download>Download PDF</a>
     </div>
     
   </div>
@@ -166,6 +166,7 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
