--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
-body {
-  background: #121212;  /* داكن جداً */
-  color: #e0e0e0;       /* نص فاتح */
-}
-  .sidebar { width:250px; background:#1e1e1e; color:#fff; flex-shrink:0; padding:20px; position:sticky; top:0; height:100vh; overflow-y:auto; border-right:3px solid #1976d2; }
+body { font-family: Arial, Helvetica, sans-serif; background: #f0f4f8; color: #222; line-height:1.6; display:flex; min-height:100vh; }
+.sidebar { width:250px; background:#1e1e1e; color:#fff; flex-shrink:0; padding:20px; position:sticky; top:0; height:100vh; overflow-y:auto; border-right:3px solid #1976d2; }
 .sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
 .sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition:color 0.3s; }
 .sidebar a:hover { color:#1976d2; }
@@ -169,6 +166,8 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
+
 
 
 
