--- a/index.html
+++ b/index.html
@@ -5,64 +5,210 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
+/* Reset */
 * { margin:0; padding:0; box-sizing:border-box; }
-body { font-family: Arial, Helvetica, sans-serif; background: #f0f4f8; color: #222; line-height:1.6; display:flex; min-height:100vh; }
-.sidebar { width:250px; background:#1e1e1e; color:#fff; flex-shrink:0; padding:20px; position:sticky; top:0; height:100vh; overflow-y:auto; border-right:3px solid #1976d2; }
-.sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
-.sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition:color 0.3s; }
-.sidebar a:hover { color:#1976d2; }
-main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
-header { display:flex; align-items:center; gap:30px; margin-bottom:40px; flex-wrap:wrap; padding:20px 30px; border-radius:15px; background: linear-gradient(135deg, #2196f3, #64b5f6); color:#fff; box-shadow:0 8px 25px rgba(0,0,0,0.2); border:2px solid #1976d2; }
-header img { height:140px; width:auto; border-radius:12px; border:3px solid #fff; box-shadow:0 4px 15px rgba(0,0,0,0.15); }
-header div h1 { font-size:2.8rem; color:#fff; margin-bottom:8px; text-shadow:1px 1px 4px rgba(0,0,0,0.4); }
-header div p { font-size:1.3rem; color:#e0f7fa; text-shadow:1px 1px 3px rgba(0,0,0,0.3); }
-section { margin-bottom:50px; }
-section h2 { color:#1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom:2px solid #1976d2; display:inline-block; padding-bottom:4px; }
-.videos { display:grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:40px; }
-.videoTitle {
-  font-size: 0.9rem;
-  color: #0d47a1;
-  text-align: center;
-  margin-bottom: 5px;
 
-  white-space: nowrap;      /* يمنع التفاف النص */
-  overflow: hidden;         /* يخفي النص الزائد */
-  text-overflow: ellipsis;  /* يظهر ... عند طول النص */
+/* ثيم داكن */
+body { 
+  font-family: 'Arial', Helvetica, sans-serif; 
+  background: #121212; 
+  color: #e0e0e0; 
+  line-height:1.6; 
+  display:flex; 
+  min-height:100vh; 
 }
 
-.videoBox { background:#e3f2fd; padding:0; border-radius:12px; box-shadow:0 6px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; }
-.videoBox:hover { transform:translateY(-5px); box-shadow:0 12px 25px rgba(0,0,0,0.2); }
-.videoBox iframe { width:100%; height:200px; border-radius:10px; }
-.resources { display:grid; grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); gap:20px; }
-.pdfBox { background:#d0e8ff; padding:15px; border-radius:12px; box-shadow:0 6px 15px rgba(0,0,0,0.1); text-align:center; }
-.pdfBox h3 { color:#0d47a1; margin-bottom:8px; font-size:1.1rem; }
-.pdfBox a { display:inline-block; padding:8px 12px; background:#1976d2; color:#fff; border-radius:6px; text-decoration:none; transition: background 0.3s; }
-.pdfBox a:hover { background:#0b3d91; }
+/* Sidebar */
+.sidebar { 
+  width:250px; 
+  background:#1b1b1b; 
+  color:#fff; 
+  flex-shrink:0; 
+  padding:20px; 
+  position:sticky; 
+  top:0; 
+  height:100vh; 
+  overflow-y:auto; 
+  border-right:3px solid #42a5f5; 
+}
+.sidebar h2 { 
+  color:#42a5f5; 
+  margin-bottom:20px; 
+  font-size:1.6rem; 
+  border-bottom:2px solid #42a5f5; 
+  padding-bottom:5px; 
+}
+.sidebar a { 
+  display:flex; 
+  align-items:center; 
+  gap:8px; 
+  color:#fff; 
+  text-decoration:none; 
+  margin:10px 0; 
+  transition:color 0.3s; 
+}
+.sidebar a:hover { color:#42a5f5; }
+
+/* Main content */
+main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
+
+/* Header */
+header { 
+  display:flex; 
+  align-items:center; 
+  gap:30px; 
+  margin-bottom:40px; 
+  flex-wrap:wrap; 
+  padding:20px 30px; 
+  border-radius:15px; 
+  background: linear-gradient(135deg, #1e88e5, #42a5f5); 
+  color:#fff; 
+  box-shadow:0 8px 25px rgba(0,0,0,0.3); 
+  border:2px solid #1976d2; 
+}
+header img { 
+  height:140px; 
+  width:auto; 
+  border-radius:12px; 
+  border:3px solid #fff; 
+  box-shadow:0 4px 15px rgba(0,0,0,0.2); 
+}
+header div h1 { 
+  font-size:2.8rem; 
+  color:#fff; 
+  margin-bottom:8px; 
+  text-shadow:1px 1px 6px rgba(0,0,0,0.5); 
+}
+header div p { 
+  font-size:1.3rem; 
+  color:#e0f7fa; 
+  text-shadow:1px 1px 4px rgba(0,0,0,0.3); 
+}
+
+/* Sections */
+section { margin-bottom:50px; }
+section h2 { 
+  color:#42a5f5; 
+  margin-bottom:20px; 
+  font-size:1.8rem; 
+  border-bottom:2px solid #42a5f5; 
+  display:inline-block; 
+  padding-bottom:4px; 
+}
+
+/* Video grid */
+.videos { 
+  display:grid; 
+  grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); 
+  gap:40px; 
+}
+.videoTitle {
+  font-size: 0.95rem;
+  color: #bbdefb;
+  text-align: center;
+  margin-bottom: 8px;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.videoBox { 
+  background:#1e1e2f; 
+  padding:0; 
+  border-radius:15px; 
+  box-shadow:0 8px 20px rgba(0,0,0,0.5); 
+  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+.videoBox:hover { 
+  transform:translateY(-7px); 
+  box-shadow:0 14px 30px rgba(0,0,0,0.7); 
+}
+.videoBox iframe { 
+  width:100%; 
+  height:200px; 
+  border-radius:12px; 
+  border:none;
+}
+
+/* PDFs */
+.resources { 
+  display:grid; 
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); 
+  gap:20px; 
+}
+.pdfBox { 
+  background:#1e1e2f; 
+  color:#fff;
+  padding:20px; 
+  border-radius:15px; 
+  box-shadow:0 8px 25px rgba(0,0,0,0.5); 
+  text-align:center; 
+  font-weight:bold; 
+  transition: transform 0.3s, box-shadow 0.3s; 
+}
+.pdfBox:hover { 
+  transform: translateY(-5px); 
+  box-shadow:0 12px 25px rgba(0,0,0,0.7); 
+}
+.pdfBox h3 { color:#42a5f5; margin-bottom:10px; font-size:1.2rem; }
+.pdfBox a { 
+  display:inline-block; 
+  margin-top:10px; 
+  padding:10px 15px; 
+  background:#42a5f5; 
+  color:#fff; 
+  border-radius:8px; 
+  text-decoration:none; 
+  transition: background 0.3s; 
+}
+.pdfBox a:hover { background:#1e88e5; }
+
+/* Load More Button */
 #loadMoreBtn {
   display:block;
   margin:20px auto 50px;
-  padding:10px 20px;
+  padding:12px 25px;
   border:none;
-  border-radius:6px;
-  background:#1976d2;
+  border-radius:8px;
+  background:#42a5f5;
   color:#fff;
   font-weight:bold;
   cursor:pointer;
   font-size:1rem;
+  transition: background 0.3s, transform 0.2s;
 }
-footer { background:#1e1e1e; color:#fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
-footer a { color:#1976d2; text-decoration:none; }
-@media(max-width:992px){ body{ flex-direction:column; } .sidebar{ width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #1976d2; } main{ padding:20px; } header{ justify-content:center; text-align:center; } }
+#loadMoreBtn:hover { 
+  background:#1e88e5;
+  transform:translateY(-3px);
+}
+
+/* Footer */
+footer { 
+  background:#1b1b1b; 
+  color:#bbb; 
+  text-align:center; 
+  padding:25px 20px; 
+  font-size:0.9rem; 
+}
+footer a { color:#42a5f5; text-decoration:none; }
+
+/* Responsive */
+@media(max-width:992px){ 
+  body{ flex-direction:column; } 
+  .sidebar{ width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #42a5f5; } 
+  main{ padding:20px; } 
+  header{ justify-content:center; text-align:center; } 
+}
 </style>
 </head>
 <body>
 
 <div class="sidebar">
   <h2>Navigation</h2>
-  <a href="#about">About</a>
-  <a href="#videos">Video Lessons</a>
-  <a href="#pdfs">PDF</a>
-  <a href="#contact">Contact Us</a>
+  <a href="#about">ℹ️ About</a>
+  <a href="#videos">📺 Video Lessons</a>
+  <a href="#pdfs">📄 PDF</a>
+  <a href="#contact">✉️ Contact Us</a>
 </div>
 
 <main>
@@ -85,25 +231,20 @@ footer a { color:#1976d2; text-decoration:none; }
   <button id="loadMoreBtn">Load More</button>
 </section>
 
-<!-- قسم ملفات PDF: يتيح للزائر تحميل ملفات تعليمية (عبارات المطار) -->
+<!-- قسم ملفات PDF: يتيح للزائر تحميل ملفات تعليمية -->
 <section id="pdfs">
   <h2>Downloadable PDFs</h2>
   <div class="resources">
-    
-  <!-- الملف الأول-->
     <div class="pdfBox">
       <h3>30 Airport Phrases</h3>
       <a href="30_Airport_Phrases.pdf" download>Download PDF</a>
     </div>
-    <!-- الملف القاني-->
     <div class="pdfBox">
       <h3>30 Restaurant Phrases</h3>
       <a href="30_Restaurant_Phrases_Egyptian_Arabic.pdf" download>Download PDF</a>
     </div>
-    
   </div>
 </section>
-
 
 <section id="contact">
   <h2>Contact Us</h2>
@@ -118,9 +259,7 @@ footer a { color:#1976d2; text-decoration:none; }
 <script>
 // عدد الفيديوهات الأولية المعروضة
 let visibleCount = 6;
-
-let videosData = []; // سيتم تخزين الفيديوهات هنا
-
+let videosData = [];
 const videoList = document.getElementById('videoList');
 const loadMoreBtn = document.getElementById('loadMoreBtn');
 
@@ -138,6 +277,7 @@ function renderVideos() {
   videoList.innerHTML = "";
   videosData.slice(0, visibleCount).forEach(video => {
     const container = document.createElement('div');
+
     const title = document.createElement('div');
     title.className = 'videoTitle';
     title.textContent = video.title;
@@ -147,8 +287,8 @@ function renderVideos() {
     const iframe = document.createElement('iframe');
     iframe.src = video.url;
     iframe.allowFullscreen = true;
-    box.appendChild(iframe);
 
+    box.appendChild(iframe);
     container.appendChild(title);
     container.appendChild(box);
     videoList.appendChild(container);
@@ -166,6 +306,8 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
+
 
 
 
